<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:paddingTop="15dp" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                
                <TextView
                    android:id="@+id/checkingIntervalLabel1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/checking_interval"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />
                
            </RelativeLayout>

            <SeekBar
                android:id="@+id/checkingInterval"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:max="@integer/maximum_checking_interval"
                android:paddingTop="10dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/checkingIntervalLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@integer/default_checking_interval"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="24sp" />

                <Spinner
                    android:id="@+id/checkingIntervalType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:entries="@array/time_type_arrays"
                    android:paddingLeft="25dp"
                    android:prompt="@string/time_type_prompt" />

            </RelativeLayout>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <CheckBox
                android:id="@+id/startOnBoot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/start_on_boot" />
            
            <TextView
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="30dp"
                android:text="@string/setting_note"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="italic" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>