<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/historicalItemsDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_occur"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/historicalItemsDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/historicalItemsDateLabel"
            android:paddingLeft="5dp"
            android:text="@string/date_occur"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />

    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/historicalItemsTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_occur"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/historicalItemsTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/historicalItemsTimeLabel"
            android:paddingLeft="5dp"
            android:text="@string/time_occur"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />
        
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/historicalItemsTimeTakenLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_taken_to_fix"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/historicalItemsTimeTaken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/historicalItemsTimeTakenLabel"
            android:paddingLeft="5dp"
            android:text="@string/time_taken_to_fix"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />

    </RelativeLayout>

</TableLayout>